Fix a bug, add a failing test, go through Intellij code suggestions